--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,17 @@
         <artifactId>selenium-java</artifactId>
         <version>3.7.1</version>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
