--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>alex</groupId>
-    <artifactId>USBelar IT Group</artifactId>
+    <artifactId>USBelar_IT_Group</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
